# HH_companies_db

./: .gitignore  README.md  main.py  project_structure.txt  pyproject.toml  testing_place.py
DB_classes_and_config/: Data_Base_Creator.py  Data_Base_Manager.py
Employers_parser/: Employers_Parser.py
Vacancies_parser/: Vacancies_Parser.py
interface_utils/: utils.py
