[tool.poetry]
name = "hh-companies-db"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hh_companies_db"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
requests = "^2.29.0"
psycopg2 = "^2.9.6"
pandas = "^2.0.1"
sqlalchemy = "^2.0.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

